[package]
name = "tic-tac-toe"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
